# tic-tac-toe

./: .gitignore  Design.md  Makefile  README.md  docker-compose.yml  notes.txt
api/: Dockerfile  pyproject.toml
api/src/: app.py  game.py
client/: Dockerfile  package-lock.json  package.json
client/src/: App.js
client/src/components/: Board.js  Board.scss  WinnerModal.js
docker-scripts/: initdb.sql
