[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Caetan <caetan.tojeiro.carpente@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
Flask-Cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
